# antigravity-red-pill

./: .coverage  .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  B760_TECHNICAL_SPEC.md  BACKLOG.md  CHANGELOG.md  DISCLAIMER.md  LICENSE  MANIFESTO.md  MEMORIAL.md  OPERATOR_MANUAL.md  QUICKSTART.md  README.md  RED_PILL_DIGEST.txt  SECURITY.md  SMITH_AUDIT.md  WELCOME_NEO.md  lazarus_deck_v6_demo.html  proyecto_completo.txt  pyproject.toml  requirements.txt
.agent/rules/: session_snapshot.md
.github/workflows/: ci.yml
docs/: PROOF_OF_FAITH.md  business_case_antigravity.md
docs/certification/: red_pill_review.md  red_pill_v4.0.9_certification_report.docx  red_pill_v407_technical_review.docx  red_pill_v409_review.md  red_pill_v410_review.md
docs/guides/: AGENT_UPDATE_GUIDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  OPERATOR_MANUAL.md
docs/technical/: AGENT_RECOMMENDATIONS.md  ARCHITECTURE.md  B760_TECHNICAL_SPEC.md  BACKLOG.md  CERTIFICATION_PROTOCOL.md  GOVERNANCE.md  ROADMAP.md  SECURITY.md  SOUND_OF_SILENCE.md  TESTS.md  THREAT_MODEL.md  decision_log.md
scripts/: backup_qdrant.sh  backup_soul.sh  check_760.sh  config.py  env_loader.sh  export_soul.sh  forge_pill.sh  import_soul.sh  install_neo.ps1  install_neo.sh  live_swarm_proof.py  memory_manager.py  migrate_jarvis.py  prepare_certification.sh  restore_all.sh  seed_neo.py  uninstall.sh
seeds/: cognitive_integrity_protocol.md  identity_template.md  persona_template.md
tests/: stress_test_smith.py  test_cli_integration.py  test_config.py  test_emotional_memory.py  test_memory.py  test_memory_edge_cases.py  test_metabolism.py  test_migration_v420.py  test_schemas.py  test_seed.py  test_sound_of_silence.py  test_version_sync.py
(+15 files in other folders)
