[project]
name = "antigravity-red-pill"
version = "4.0.5"
description = "A neuro-inspired local RAG persistence layer for AI assistants."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "qdrant-client>=1.8.0",
    "fastembed>=0.2.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "PyYAML>=6.0.1",
]

[project.scripts]
red-pill = "red_pill.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/red_pill"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "mypy>=1.0.0",
]
