[project]
name = "antigravity-red-pill"
version = "4.2.0"
description = "A neuro-inspired local RAG persistence layer for AI assistants."
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.10"
dependencies = [
    "qdrant-client>=1.8.0",
    "fastembed>=0.2.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "PyYAML>=6.0.1",
    "pydantic>=2.0.0",
]

[project.scripts]
red-pill = "red_pill.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/red_pill"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "mypy>=1.0.0",
    "ruff>=0.3.0",
    "pytest-cov>=4.1.0",
]

[tool.ruff]
line-length = 150
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "W191", # Allow tabs (Sound of Silence protocol)
    "E501", # Allow long lines (often required in logs/tests)
    "E265", # Allow some comment variants
]

[tool.ruff.format]
indent-style = "tab"
quote-style = "double"
